--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,3 +1,12 @@
+.wrapper {
+  display: flex;
+  min-height: 100vh;
+}
+
+.content {
+  margin: auto;
+}
+
 .title {
   text-align: center;
   color: #fff;
